--- a/style.css
+++ b/style.css
@@ -124,6 +124,8 @@ body{
   }
   
   .main {
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
     margin: 0;
     padding: 0;
     background-color: var(--identity-primary);
