--- a/battle.css
+++ b/battle.css
@@ -30,7 +30,6 @@ body {
   height: 20rem;
   margin-bottom: 1rem;
 }
-
 .health-bar {
   width: 100%;
   height: 1rem;
@@ -39,7 +38,18 @@ body {
   border-radius: 5px;
   overflow: hidden;
 }
-
+#player1-health{
+  height: 100%;
+  background-color: #f00;
+  border-radius: 5px;
+  transition: width 0.5s ease;
+}
+#player2-health{
+  height: 100%;
+  background-color: #f00;
+  border-radius: 5px;
+  transition: width 0.5s ease;
+}
 .health {
   height: 100%;
   background-color: #f00;
