--- a/battle.css
+++ b/battle.css
@@ -26,8 +26,8 @@ body {
 }
 
 .pokemon img {
-  width: 20rem;
-  height: 20rem;
+  width: 18rem;
+  height: 18rem;
   margin-bottom: 1rem;
 }
 .health-bar {
@@ -117,3 +117,20 @@ body {
 .comment-box .comment p {
   margin: 0;
 }
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid red; /* Blue */
+  border-radius: 50%; /* Circular shape */
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 40%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+ }
+ 
+ @keyframes spin {
+   0% { transform: rotate(0deg); }
+   100% { transform: rotate(360deg); }
+ }
