changes the background and fixes the turns

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-image: url("assets/Lily-Pond.webp");
+    background-image: url("assets/bg2.png");
+    background-color:#212121;
 }
 
 .player{
