--- a/instructions.css
+++ b/instructions.css
@@ -101,3 +101,16 @@ li {
         font-size: 14px;
     }
 }
+#mobileMessage {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    padding-top: 20%;
+}
