--- a/styles/battle.css
+++ b/styles/battle.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./assets/pokeballbg.png");
+  background-image: url("../assets/pokeballbg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
