--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
 body{
-    background-image: url("assets/bg2.png");
+    background-image: url("../assets/bg2.png");
     background-color:#212121;
 }
 
 .player{
     width: 80px;
     height: 100px;
-    background-image: url("assets/player_front.png");
+    background-image: url("../assets/player_front.png");
     background-size: 240px 100px;
     background-position: -80px 0;
     position: fixed;
@@ -30,7 +30,7 @@ body{
 .pokeball{
   width: 30px;
   height: 30px;
-  background-image: url("assets/pokeball.png");
+  background-image: url("../assets/pokeball.png");
   background-size: 100% 100%;
   position: fixed;
 }
